@@ -6,5 +6,40 @@
 
 #button-groupdavSync[disabled="true"]
 {
-  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-disabled-24.png);
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-24-disabled.png);
+  -moz-box-orient: vertical;
+}
+
+toolbar[iconsize="small"] #button-groupdavSync
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-16.png);
+  -moz-box-orient: vertical;
+}
+
+toolbar[iconsize="small"] #button-groupdavSync[disabled="true"]
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-16-disabled.png);
+}
+
+toolbar[arch="mac"] #button-groupdavSync
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-32.png);
+  -moz-box-orient: vertical;
+}
+
+toolbar[arch="mac"] #button-groupdavSync[disabled="true"]
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-32-disabled.png);
+  -moz-box-orient: vertical;
+}
+
+toolbar[arch="mac"][iconsize="small"] #button-groupdavSync
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-24.png);
+  -moz-box-orient: vertical;
+}
+
+toolbar[arch="mac"][iconsize="small"] #button-groupdavSync[disabled="true"]
+{
+  list-style-image: url(chrome://sogo-connector/skin/addressbook/sync-24-disabled.png);
 }
